--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Luhan Lingnau C22363 EESE316 Foramtive Assessment 2 -->
+<!-- HTML -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +11,7 @@
 <body>
     <div class="Calculator">
         <div class="title">
-            <h3>Calculator</h3>
+            <h3> Luhan Calculator</h3>
         </div>
         <div class="screen">
             <form name="Calculator">
